k8s/user-service/deployment-v3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-v3
  labels:
    app: user-service

spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
      version: v3
  template:
    metadata:
      labels:
        app: user-service
        version: v3
    spec:
      containers:
        - name: user-service-pod
          image: kamalv007/social-user-service:v3
          securityContext:
            runAsUser: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8081
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 5
