k8s/user-service/istio-canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: user-service-buckets
spec:
  host: user-service
  subsets:
    - name: v2-bucket
      labels:
        version: v2
    - name: v3-bucket
      labels:
        version: v3
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-service-router
spec:
  hosts:
    - user-service
  http:
    - route:
        - destination:
            host: user-service
            subset: v2-bucket
          weight: 90
        - destination:
            host: user-service
            subset: v3-bucket
          weight: 10
